adl-frontend/src/test/resources/unit/error/semantic/adlRefs/ref7.adl
//#SemanticError GroupId=ADL ErrorId=ADL_NOT_FOUND line=4

composite adlRefs.ref7 extends generic.Generic1<
  foo.unknownADL
  >
{
  contains Primitive1 as subComp2;
  
  binds subComp1.cItf to subComp2.sItf;
  binds subComp2.cItf to this.cItf;
}
